@@ -252,6 +252,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <forkMode>always</forkMode>
+                            <!--<argLine>-Xmx768m -Xms768m -XX:MaxPermSize=384m ${argLine}</argLine>-->
                             <argLine>-Xmx768m -Xms768m -XX:MaxPermSize=384m ${argLine}</argLine>
                             <!--
                                 If using this custom argLine profile (typically to support command-line override),
@@ -266,14 +267,14 @@
     </profiles>
 
     <properties>
-        <java.target.version>1.6</java.target.version>
+        <java.target.version>1.8</java.target.version>
 
         <!-- JAR versions -->
-        <coherence.version>12.1.3-0-0</coherence.version>
+        <coherence.version>12.1.2-0-1</coherence.version>
         <junit.version>4.8.2</junit.version>
 
         <starting.thousand.port.number>40</starting.thousand.port.number>
-        <fork.count>4</fork.count>
+        <fork.count>1</fork.count>
 
         <!-- Plugin versions -->
         <maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
